@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-20T16:11:53Z",
-  "count" : 3,
-  "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 3,
-  "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "timestamp" : "2022-05-21T00:36:58Z",
+  "count" : 7,
+  "count_minmax" : [ 2, 7 ],
+  "count_decinc" : [ -0, +7 ],
+  "uniques" : 7,
+  "uniques_minmax" : [ 2, 7 ],
+  "uniques_decinc" : [ -0, +7 ]
 }
