@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-20T16:11:53Z",
+  "timestamp" : "2022-05-21T00:36:58Z",
   "count_outdated" : 22,
   "uniques_outdated" : 17,
-  "count" : 32,
-  "uniques" : 26,
+  "count" : 36,
+  "uniques" : 30,
   "clones" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
@@ -28,10 +28,10 @@
     },
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 2, 3 ]
+      "count": 7,
+      "count_minmax": [ 2, 7 ],
+      "uniques": 7,
+      "uniques_minmax": [ 2, 7 ]
     }
   ]
 }
