@@ -1,6 +1,6 @@
 {
-  "count": 10,
-  "uniques": 7,
+  "count": 14,
+  "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-05-08T00:00:00Z",
@@ -19,8 +19,8 @@
     },
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 3,
-      "uniques": 3
+      "count": 7,
+      "uniques": 7
     }
   ]
 }
